--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url =http://localhost:3030
-sentiment_analyzer_url=http://localhost:5000/
+export BACKEND_URL=http://localhost:3030
+export SENTIMENT_ANALYZER_URL=http://localhost:5050
