--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -18,12 +18,14 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
+
+  /*"eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
-  },
+  },*/
+  
   "browserslist": {
     "production": [
       ">0.2%",
