--- a/server/frontend/nginx.conf
+++ b/server/frontend/nginx.conf
@@ -8,6 +8,10 @@ server {
     try_files $uri $uri/ /index.html;
   }
 
+  location /djangoapp {
+    proxy_pass http://dealership-service:8000;
+  }
+
   error_page   500 502 503 504  /50x.html;
   location = /50x.html {
     root   /usr/share/nginx/html;
