Fourth module commit

--- a/server/djangoapp/microservices/Dockerfile
+++ b/server/djangoapp/microservices/Dockerfile
@@ -6,5 +6,4 @@ WORKDIR /python-docker
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 COPY . .
-RUN ls
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
