Fixing frontend server issues serving static pages

--- a/server/frontend/nginx.conf
+++ b/server/frontend/nginx.conf
@@ -2,14 +2,57 @@ server {
   listen 80;
   server_name localhost;
 
+  # Redirect root to Home.html
+  location = / {
+    return 301 /static/Home.html;
+  }
+
+  # React app and static files
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
   }
 
-  location /djangoapp {
+  # Static HTML pages
+  location /static/ {
+    root /usr/share/nginx/html;
+    try_files $uri $uri/ =404;
+  }
+
+  # Django admin static files
+  location /admin/static/ {
     proxy_pass http://dealership-service:8000;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_cache_bypass $http_upgrade;
+  }
+
+  # Django API endpoints
+  location /djangoapp/ {
+    proxy_pass http://dealership-service:8000;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_cache_bypass $http_upgrade;
+    
+    # Websocket support if needed
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+  }
+
+  # Django admin interface
+  location /admin/ {
+    proxy_pass http://dealership-service:8000;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_cache_bypass $http_upgrade;
   }
 
   error_page   500 502 503 504  /50x.html;
