Containerizing the app

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,8 @@
+    # Backend Dockerfile dealership
     FROM python:3.12.0-slim-bookworm
 
-    ENV PYTHONBUFFERED 1
-    ENV PYTHONWRITEBYTECODE 1
+    ENV PYTHONBUFFERED=1
+    ENV PYTHONWRITEBYTECODE=1
 
     ENV APP=/app
 
