--- a/server/frontend/nginx.conf
+++ b/server/frontend/nginx.conf
@@ -2,10 +2,13 @@ server {
   listen 80;
   server_name localhost;
 
-  # Redirect root to Home.html
+  # Serve Home.html directly
   location = / {
-    return 301 /static/Home.html;
+    root /usr/share/nginx/html/static;
+    index Home.html;
+    try_files $uri $uri/ /Home.html;
   }
+
 
   # React app and static files
   location / {
