React app, nginx.conf cnflict of landing page Home.html

--- a/server/frontend/nginx.conf
+++ b/server/frontend/nginx.conf
@@ -2,11 +2,10 @@ server {
   listen 80;
   server_name localhost;
 
-  # Serve Home.html directly
+  # Serve Home.html for the root path
   location = / {
     root /usr/share/nginx/html/static;
-    index Home.html;
-    try_files $uri $uri/ /Home.html;
+    try_files /Home.html =404;
   }
 
 
