Made changes to routing within nginx.cof and urls.py and frontend files to ensure app workes correctly on containers

--- a/server/database/database-k8s.yaml
+++ b/server/database/database-k8s.yaml
@@ -35,6 +35,17 @@ spec:
           volumeMounts:
             - name: mongo-data
               mountPath: /data/db
+          env:
+            - name: MONGO_INITDB_ROOT_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongo-admin-secret
+                  key: MONGO_ROOT_USER
+            - name: MONGO_INITDB_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mongo-admin-secret
+                  key: MONGO_ROOT_PASSWORD
   volumeClaimTemplates:
     - metadata:
         name: mongo-data
@@ -78,6 +89,6 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 3030
-          env:
-            - name: MONGO_DB_URL
-              value: "mongodb://mongo-db-service:27017"
+          envFrom:
+            - configMapRef:
+                name: node-api-env
