--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,4 @@
-export BACKEND_URL=http://localhost:3030
-export SENTIMENT_ANALYZER_URL=http://localhost:5050
+# Use the Kubernetes Service Names for inter-container communication
+# This is the correct way to address other services (containers) in the cluster.
+BACKEND_URL=http://node-api-service:3030
+SENTIMENT_ANALYZER_URL=http://sentiment-analyzer-service:5050
