--- a/server/frontend/nginx.conf
+++ b/server/frontend/nginx.conf
@@ -23,9 +23,9 @@ server {
   }
 
   # Django admin static files
-  location /admin/static/ {
+  location /static/admin/ {
     proxy_pass http://dealership-service:8000;
-    proxy_set_header Host $host;
+    proxy_set_header Host $http_host; 
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
@@ -34,8 +34,9 @@ server {
 
   # Django API endpoints
   location /djangoapp/ {
+    # rewrite ^/djangoapp/(.*)$ /$1 break;
     proxy_pass http://dealership-service:8000;
-    proxy_set_header Host $host;
+    proxy_set_header Host $http_host; # <-- FIXED
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
@@ -47,10 +48,17 @@ server {
     proxy_set_header Connection "upgrade";
   }
 
-  # Django admin interface
+  # ADD THIS BLOCK:
+  # Specifically captures /admin (no slash) and issues a 
+  # relative redirect to /admin/, preserving the host and port.
+  location = /admin {
+    return 301 /admin/;
+  }
+
+  # Django admin interface (your existing block)
   location /admin/ {
     proxy_pass http://dealership-service:8000;
-    proxy_set_header Host $host;
+    proxy_set_header Host $http_host; # <-- FIXED
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
